[package]
name = "i3status-rs"
description = "A feature-rich and resource-friendly replacement for i3status, written in Rust."
repository = "https://github.com/greshake/i3status-rust/"
readme = "README.md"
license = "GPL-3.0-only"
version = "0.35.0"
authors = [
  "Kai Greshake <development@kai-greshake.de>",
  "Contributors on GitHub (https://github.com/greshake/i3status-rust/graphs/contributors)",
]
edition = "2024"

[workspace]
members = [".", "xtask"]
resolver = "3"

[features]
default = ["pulseaudio"]
pulseaudio = ["libpulse-binding"]
pipewire = ["dep:pipewire"]
notmuch = ["dep:notmuch"]
maildir = ["dep:maildir", "glob"]
icu_calendar = ["dep:icu_datetime", "dep:icu_calendar", "dep:icu_locid"]
debug_borders = []                # Make widgets' borders visible

[package.metadata.docs.rs]
features = ["maildir", "notmuch"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1"
backon = { version = "1.2", default-features = false, features = ["tokio-sleep"] }
base64 = { version = "0.22.1" }
bitflags = "2.9"
bytes = "1.11"
calibright = { version = "0.1.13", features = ["watch"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "unstable-locales"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.0", default-features = false, features = ["std", "derive", "help", "usage"] }
dirs = "6.0"
env_logger = "0.11"
futures = { version = "0.3.31", default-features = false }
glob = { version = "0.3.1", optional = true }
iana-time-zone = "0.1.60"
icalendar = { version = "0.16.12", features = ["chrono-tz"] }
icu_calendar = { version = "1.3.0", optional = true }
icu_datetime = { version = "1.3.0", optional = true }
icu_locid = { version = "1.3.0", optional = true }
indexmap = { version = "2.0", features = ["serde"] }
inotify = "0.11"
itertools = "0.13"
libc = "0.2"
libpulse-binding = { version = "2.0", default-features = false, optional = true }
log = "0.4"
maildir = { version = "0.6", optional = true }
neli = { version = "0.6", features = ["async"] }
neli-wifi = { version = "0.6", features = ["async"] }
nix = { version = "0.29", features = ["fs", "process"] }
nom = "8.0.0"
notmuch = { version = "0.8", optional = true }
nq-core = { git = "https://github.com/cloudflare/networkquality-rs.git", rev = "ecf205901fc1627feb681697f3fab30fdc363cbc" }
nq-latency = {  git = "https://github.com/cloudflare/networkquality-rs.git", rev = "ecf205901fc1627feb681697f3fab30fdc363cbc" }
nq-rpm = { git = "https://github.com/cloudflare/networkquality-rs.git", rev = "ecf205901fc1627feb681697f3fab30fdc363cbc" }
nq-tokio-network = { git = "https://github.com/cloudflare/networkquality-rs.git", rev = "ecf205901fc1627feb681697f3fab30fdc363cbc" }
num-traits = "0.2"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
pipewire = { version = "0.9", default-features = false, optional = true }
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1.5"
reqwest = { version = "0.12", default-features=false, features = ["json", "rustls-tls"] }
rrule = "0.14.0"
sensors = "0.2.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
shellexpand = "3.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
smart-default = "0.7"
sunrise = "2.1"
swayipc-async = "3.0.0"
thiserror = "2.0"
tokio-util = { version = "0.7", features = ["codec"] }
toml = { version = "0.8", features = ["preserve_order"] }
unicode-segmentation = "1.10.1"
wayrs-client = { version = "1.0", features = ["tokio"] }
wayrs-protocols = { version = "0.14", features = ["wlr-foreign-toplevel-management-unstable-v1"] }
x11rb-async = { version = "0.13.1", features = ["xkb"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dependencies.tokio]
version = "1.43"
features = [
  "fs",
  #"io-util",
  "io-std",
  "macros",
  #"net",
  #"parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  #"signal",
  "sync",
  "time",
]

[profile.release]
lto = "thin"

[profile.release-debug-info]
inherits = "release"
debug = true

