[package]
name = "i3status-rs"
description = "A feature-rich and resource-friendly replacement for i3status, written in Rust."
repository = "https://github.com/greshake/i3status-rust/"
readme = "README.md"
license = "GPL-3.0-only"
version = "0.36.1"
authors = [
  "Kai Greshake <development@kai-greshake.de>",
  "Contributors on GitHub (https://github.com/greshake/i3status-rust/graphs/contributors)",
]
edition = "2024"

[workspace]
members = [".", "xtask"]
resolver = "3"

[features]
default = ["pulseaudio"]
pulseaudio = ["libpulse-binding"]
pipewire = ["dep:pipewire"]
notmuch = ["dep:notmuch"]
maildir = ["dep:maildir", "glob"]
icu_calendar = ["dep:icu_datetime", "dep:icu_locale"]
debug_borders = []                # Make widgets' borders visible

[package.metadata.docs.rs]
features = ["maildir", "notmuch"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
clap = { version = "4.0", default-features = false, features = ["std", "derive", "help", "usage"] }

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
calibright = { version = "0.1.13", features = ["watch"] }
inotify = "0.11"
neli = { version = "0.6", features = ["async"] }
neli-wifi = { version = "0.6", features = ["async"] }
notmuch = { version = "0.8", optional = true }
pipewire = { version = "0.10", default-features = false, optional = true }
sensors = "0.2.2"
swayipc-async = "3.0.0"

[dependencies]
async-trait = "0.1"
backon = { version = "1.2", default-features = false, features = ["tokio-sleep"] }
base64 = { version = "0.22.1" }
bitflags = "2.9"
bytes = "1.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "unstable-locales"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { workspace = true }
dirs = "6.0"
env_logger = "0.11"
futures = { version = "0.3.31", default-features = false }
glob = { version = "0.3.1", optional = true }
iana-time-zone = "0.1.60"
icalendar = { version = "0.17.9", features = ["chrono-tz", "recurrence"] }
icu_datetime = { version = "2.2", optional = true, default-features = false, features = ["compiled_data"] }
icu_locale = { version = "2.2", optional = true }
indexmap = { version = "2.0", features = ["serde"] }
itertools = "0.13"
libc = "0.2"
libpulse-binding = { version = "2.0", default-features = false, optional = true }
log = "0.4"
maildir = { version = "0.6", optional = true }
nix = { version = "0.29", features = ["fs", "process"] }
nom = "8.0.0"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
num-traits = "0.2"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
shellexpand = "3.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
smart-default = "0.7"
sunrise = "3.0"
thiserror = "2.0"
tokio-util = { version = "0.7", features = ["codec"] }
toml = { version = "0.8", features = ["preserve_order"] }
unicode-segmentation = "1.10.1"
wayrs-client = { version = "1.0", features = ["tokio"] }
wayrs-protocols = { version = "0.14", features = ["wlr-foreign-toplevel-management-unstable-v1"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
x11rb-async = { version = "0.13.1", features = ["xkb"] }

[dependencies.tokio]
version = "1.43"
features = [
  "fs",
  #"io-util",
  "io-std",
  "macros",
  #"net",
  #"parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  #"signal",
  "sync",
  "time",
]

[profile.release]
lto = "thin"

[profile.release-debug-info]
inherits = "release"
debug = true

